broken-app.yml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: broken-app
    namespace: dev
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: broken-app
    template:
      metadata:
        labels:
          app: broken-app
      spec:
        containers:
        - name: app
          image: nginx:latest
          ports:
          - containerPort: 80
