database-secure.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-secure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-secure
  template:
    metadata:
      labels:
        app: database-secure
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
