broken-service.yml
  apiVersion: v1
  kind: Service
  metadata:
    name: broken-service
    namespace: dev
  spec:
    selector:
      app: broken-app
    ports:
    - port: 80
      targetPort: 80
