advanced-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: advanced-routing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: devops.local
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: my-prod-app
            port:
              number: 5000
      - path: /web(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
              name: hello-local
              port:
                number: 80
